tests for BookAppointment completed.