@@ -1,7 +1,11 @@
 package com.barbershop_appointment_api.services;
 
+import com.barbershop_appointment_api.DTOs.AppointmentReponseDTO;
+import com.barbershop_appointment_api.DTOs.AppointmentRequestDTO;
+import com.barbershop_appointment_api.exceptions.AppointmentConflictException;
 import com.barbershop_appointment_api.exceptions.DatabaseException;
 import com.barbershop_appointment_api.exceptions.ForbiddenException;
+import com.barbershop_appointment_api.models.entities.Appointment;
 import com.barbershop_appointment_api.models.entities.User;
 import com.barbershop_appointment_api.models.projections.AppointmentProjection;
 import com.barbershop_appointment_api.repositories.AppointmentRepository;
@@ -47,17 +51,31 @@ public class AppointmentServiceTests {
     private Long permitedUserId;
     private Long nonPermitedUsertId;
     private User client;
+    private User barber;
     private AppointmentProjection appointmentProjection;
+    private String validClientEmail;
+    private String validBarberEmail;
+    private String nonValidEmail;
+    private AppointmentRequestDTO requestDto;
+    private AppointmentReponseDTO responseDto;
+
+    @BeforeEach
+    void setUpCommon() {
+        permitedUserId = 1L;
+        nonPermitedUsertId = 2L;
+        nonExistingClientId = 3L;
+        client = Factory.createUserClient();
+        barber = Factory.createUserBarber();
+
+        doNothing().when(validationUserService).validateSelfOrAdminOrBarber(permitedUserId);
+        doThrow(new ForbiddenException("Acesso negado")).when(validationUserService).validateSelfOrAdminOrBarber(nonPermitedUsertId);
+    }
 
     @Nested
     class FindByClientId {
 
         @BeforeEach
         void setUp() throws Exception {
-            permitedUserId = 1L;
-            nonPermitedUsertId = 2L;
-            nonExistingClientId = 3L;
-            client = Factory.createUserClient();
 
             appointmentProjection = mock(AppointmentProjection.class);
             List<AppointmentProjection> expectedAppointments = List.of(appointmentProjection);
@@ -65,9 +83,6 @@ public class AppointmentServiceTests {
             when(userRepository.findById(nonExistingClientId)).thenReturn(Optional.empty());
             when(userRepository.findById(permitedUserId)).thenReturn(Optional.of(client));
             when(userRepository.findById(nonPermitedUsertId)).thenReturn(Optional.of(client));
-
-            doNothing().when(validationUserService).validateSelfOrAdminOrBarber(permitedUserId);
-            doThrow(new ForbiddenException("Acesso negado")).when(validationUserService).validateSelfOrAdminOrBarber(nonPermitedUsertId);
 
             when(repository.findByClient(client)).thenReturn(expectedAppointments);
         }
@@ -82,7 +97,7 @@ public class AppointmentServiceTests {
             // Assert
             assertNotNull(result, "A lista de agendamentos não deve ser nula");
             assertFalse(result.isEmpty(), "A lista de agendamentos não deve estar vazia");
-            assertEquals(appointmentProjection, result.get(0), "O agendamento retornado deve ser o esperado");
+            assertEquals(appointmentProjection, result.getFirst(), "O agendamento retornado deve ser o esperado");
 
             // Verify
             verify(userRepository, times(1)).findById(client.getId());
@@ -133,6 +148,114 @@ public class AppointmentServiceTests {
             verify(userRepository, times(1)).findById(nonPermitedUsertId);
             verify(validationUserService, times(1)).validateSelfOrAdminOrBarber(nonPermitedUsertId);
             verify(repository, never()).findByClient(any());
+        }
+    }
+
+    @Nested
+    class BookAppointment {
+
+        @BeforeEach
+        void setUp() throws Exception {
+            validClientEmail = "client@gmail.com";
+            validBarberEmail = "barber@gmail.com";
+            nonValidEmail = "nonValid@gmail.com";
+            requestDto = Factory.createAppointmentRequestDTO();
+            responseDto = Factory.createAppointmentReponseDTO();
+
+            when(userRepository.findByEmail(validClientEmail)).thenReturn(client);
+            when(userRepository.findByEmail(validBarberEmail)).thenReturn(barber);
+            when(userRepository.findByEmail(nonValidEmail)).thenReturn(null);
+
+            when(repository.save(any(Appointment.class))).
+                    thenAnswer(invocation -> invocation.getArgument(0));
+
+        }
+
+        @Test
+        void shouldThrowIllegalArgumentExceptionWhenClientEmailNotFound() {
+            requestDto.setClientEmail(nonValidEmail);
+
+            IllegalArgumentException ex = assertThrows(
+                    IllegalArgumentException.class,
+                    () -> service.bookAppointment(requestDto)
+            );
+
+            assertEquals("Cliente não encontrado: " + nonValidEmail, ex.getMessage());
+
+            verify(userRepository, times(1)).findByEmail(requestDto.getClientEmail());
+            verify(userRepository, never()).findByEmail(requestDto.getBarberEmail());
+            verify(validationAppointmentService, never()).validateAppointment(any());
+            verify(repository, never()).save(any());
+        }
+
+        @Test
+        void shouldThrowIllegalArgumentExceptionWhenBarberEmailNotFound() {
+            requestDto.setClientEmail(validClientEmail);
+            requestDto.setBarberEmail(nonValidEmail);
+
+            IllegalArgumentException ex = assertThrows(
+                    IllegalArgumentException.class,
+                    () -> service.bookAppointment(requestDto)
+            );
+
+            assertEquals("Barbeiro não encontrado: " + nonValidEmail, ex.getMessage());
+
+            verify(userRepository, times(1)).findByEmail(requestDto.getClientEmail());
+            verify(userRepository, times(1)).findByEmail(requestDto.getBarberEmail());
+            verify(validationAppointmentService, never()).validateAppointment(any());
+            verify(repository, never()).save(any());
+        }
+
+        @Test
+        void shouldNotSaveAppointmentWhenValidationFails() {
+            doThrow(new AppointmentConflictException("Conflito de horário"))
+                    .when(validationAppointmentService).validateAppointment(any(Appointment.class));
+
+            AppointmentConflictException ex = assertThrows(
+                    AppointmentConflictException.class,
+                    () -> service.bookAppointment(requestDto)
+            );
+
+            assertEquals("Conflito de horário", ex.getMessage());
+
+            verify(userRepository, times(1)).findByEmail(requestDto.getClientEmail());
+            verify(userRepository, times(1)).findByEmail(requestDto.getBarberEmail());
+            verify(validationAppointmentService, times(1)).validateAppointment(any(Appointment.class));
+            verify(repository, never()).save(any());
+        }
+
+        @Test
+        void shouldThrowForbiddenExceptionWhenUserDoesNotHavePermission() {
+            requestDto.setClientEmail(validClientEmail);
+            requestDto.setBarberEmail(validBarberEmail);
+
+            doThrow(new ForbiddenException("Acesso negado"))
+                    .when(validationUserService).validateSelfOrAdminOrBarber(client.getId());
+
+            ForbiddenException ex = assertThrows(
+                    ForbiddenException.class,
+                    () -> service.bookAppointment(requestDto)
+            );
+
+            assertEquals("Acesso negado", ex.getMessage());
+
+            verify(validationAppointmentService, times(1)).validateAppointment(any(Appointment.class));
+            verify(validationUserService, times(1)).validateSelfOrAdminOrBarber(client.getId());
+            verify(repository, never()).save(any());
+        }
+
+        @Test
+        void shouldReturnAppointmentResponseWhenRequestIsValid() {
+            requestDto.setBarberEmail(validBarberEmail);
+            requestDto.setClientEmail(validClientEmail);
+
+            AppointmentReponseDTO result = service.bookAppointment(requestDto);
+
+            assertNotNull(result, "O DTO não deve ser nulo");
+
+            verify(validationAppointmentService, times(1)).validateAppointment(any(Appointment.class));
+            verify(validationUserService, times(1)).validateSelfOrAdminOrBarber(client.getId());
+            verify(repository, times(1)).save(any(Appointment.class));
         }
     }
 }
